--- a/src/Assets/CSS/style.scss
+++ b/src/Assets/CSS/style.scss
@@ -11,7 +11,6 @@ html {
   border-radius: 2rem;
 }
 
-
 .header {
   background-color: #090909;
   padding: 13px;
@@ -38,7 +37,6 @@ html {
     color: white;
   }
 }
-
 
 .Main-Artist-Card {
   background-color: #181818;
@@ -99,7 +97,6 @@ html {
   }
 }
 
-
 .Genre-Card {
   background-color: #181818;
   border-radius: 5px;
@@ -108,7 +105,6 @@ html {
   color: white;
   padding: 1rem;
   overflow: hidden;
-  
 
   &__image {
     height: 120px;
@@ -151,4 +147,18 @@ html {
     border-radius: 5px;
     background-color: #2a2a2a;
   }
+}
+
+::-webkit-scrollbar {
+  width: 13px;
+  height: 13px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #535353;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: gray;
 }
