Spotify Conversion (Act II)

--- a/src/Assets/CSS/layout/header.scss
+++ b/src/Assets/CSS/layout/header.scss
@@ -40,6 +40,7 @@
     border-radius: 16px;
     background-color: white;
     border: 0px;
+    margin-right: 19px;
   }
   &__chevron {
     color: white;
