--- a/src/Assets/CSS/layout/sidebar.scss
+++ b/src/Assets/CSS/layout/sidebar.scss
@@ -20,7 +20,15 @@
     display: flex;
     padding: 0 16px;
     cursor: pointer;
+    color: #b3b3b3;
+    text-decoration: none;
+    transition: 0.5s;
     &:hover {
+      color: white;
+      transition: 0.5s;
+    }
+    &--active {
+      color: white;
       background: #282828;
       transition: 0.5s;
     }
@@ -29,10 +37,10 @@
     font-size: 26px;
     height: auto;
     margin-right: 1rem;
-    color: #b3b3b3;
+    position: relative;
+    bottom: 4px;
   }
   &__list-name {
-    color: #b3b3b3;
     height: auto;
     font-size: 14px;
     align-self: center;
