--- a/src/Assets/CSS/main.scss
+++ b/src/Assets/CSS/main.scss
@@ -12,6 +12,7 @@ html {
   height: 100%;
   width: 100%;
   background-color: #1e1e1e;
+  overflow-y: overlay;
 }
 
 .form-control {
@@ -139,7 +140,7 @@ html {
   background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background: #535353;
+  background-color: rgba(83, 83, 83, 0.1);
 }
 ::-webkit-scrollbar-thumb:hover {
   background: gray;
